If a splash image is too small, center it.  If it's too big, shrink it to fit.  Also removed some selectors that no longer apply to current output.

--- a/Products/CNXContent/skins/CNXContent/cnx-styles/newlook/modern-textbook.css
+++ b/Products/CNXContent/skins/CNXContent/cnx-styles/newlook/modern-textbook.css
@@ -264,13 +264,17 @@ div.concept-check{
   position: relative;
 }
 
-#cnx_splash table, #cnx_splash tbody, #cnx_splash tr, #cnx_splash td, #cnx_splash caption{
+#cnx_splash caption{
   display: block;
   width: 100%;
 }
 
+#cnx_splash_image{
+  text-align: center;
+}
+
 #cnx_splash_image img{
-  width: 100%;
+  max-width: 100%;
 }
 
 .introduction #cnx_social_media_top .cnx_twitter, .introduction #cnx_social_media_top .cnx_facebook{
